--- a/spring/1.3-填充beanFactory-prepareBeanFactory.md
+++ b/spring/1.3-填充beanFactory-prepareBeanFactory.md
@@ -32,6 +32,7 @@
 		beanFactory.registerResolvableDependency(ApplicationContext.class, this);
 
 		// Register early post-processor for detecting inner beans as ApplicationListeners.
+        //主要是对ApplicationListeners的实现类进行装饰，如果ApplicationListeners的实现类初始化时将bean加到context的applicationListeners里，销毁则移除
 		beanFactory.addBeanPostProcessor(new ApplicationListenerDetector(this));
 
 		// Detect a LoadTimeWeaver and prepare for weaving, if found.
