--- a/spring/1.3-填充beanFactory-prepareBeanFactory.md
+++ b/spring/1.3-填充beanFactory-prepareBeanFactory.md
@@ -35,7 +35,7 @@
         //主要是对ApplicationListeners的实现类进行装饰，如果ApplicationListeners的实现类初始化时将bean加到context的applicationListeners里，销毁则移除
 		beanFactory.addBeanPostProcessor(new ApplicationListenerDetector(this));
 
-		// Detect a LoadTimeWeaver and prepare for weaving, if found.
+		// NativeDetector.inNativeImage()主要是判断是不是GraalVM，并且beanFactory包含loadTimeWeaver这个bean，就设置LoadTimeWeaverAwareProcessor.
 		if (!NativeDetector.inNativeImage() && beanFactory.containsBean(LOAD_TIME_WEAVER_BEAN_NAME)) {
 			beanFactory.addBeanPostProcessor(new LoadTimeWeaverAwareProcessor(beanFactory));
 			// Set a temporary ClassLoader for type matching.
