--- a/spring/1.5-执行beanFactory处理器-invokeBeanFactoryPostProcessors.md
+++ b/spring/1.5-执行beanFactory处理器-invokeBeanFactoryPostProcessors.md
@@ -14,7 +14,7 @@
 		}
 	}
 ```
-所以这个方法的重点是```PostProcessorRegistrationDelegate.invokeBeanFactoryPostProcessors```:
+所以这个方法的重点是```PostProcessorRegistrationDelegate.invokeBeanFactoryPostProcessors```，这里的逻辑其实不复杂，比较清晰明了，首先判断beanFactory是否是BeanDefinitionRegistry的子类，如果是那么会将postProcessor分为普通的BeanFactoryPostProcessor和BeanDefinitionRegistryPostProcessor，如果是BeanDefinitionRegistryPostProcessor，则会排序执行postProcessBeanDefinitionRegistry方法，然后最后执行postProcessor的postProcessBeanFactory方法:
 ```
 	public static void invokeBeanFactoryPostProcessors(
 			ConfigurableListableBeanFactory beanFactory, List<BeanFactoryPostProcessor> beanFactoryPostProcessors) {
@@ -37,13 +37,16 @@
         //DefaultListableBeanFactory是BeanDefinitionRegistry的子类，所以会进到if里
 		if (beanFactory instanceof BeanDefinitionRegistry) {
 			BeanDefinitionRegistry registry = (BeanDefinitionRegistry) beanFactory;
+			//存放所有实现了beanFactoryPostProcessors接口的对象
 			List<BeanFactoryPostProcessor> regularPostProcessors = new ArrayList<>();
+			//存放所有实现了BeanDefinitionRegistryPostProcessor接口的对象，mybatis的MapperScannerConfigurer就实现了BeanDefinitionRegistryPostProcessor
 			List<BeanDefinitionRegistryPostProcessor> registryProcessors = new ArrayList<>();
 
 			for (BeanFactoryPostProcessor postProcessor : beanFactoryPostProcessors) {
 				if (postProcessor instanceof BeanDefinitionRegistryPostProcessor) {
 					BeanDefinitionRegistryPostProcessor registryProcessor =
 							(BeanDefinitionRegistryPostProcessor) postProcessor;
+					//对实现了BeanDefinitionRegistryPostProcessor接口的对象先执行postProcessBeanDefinitionRegistry方法
 					registryProcessor.postProcessBeanDefinitionRegistry(registry);
 					registryProcessors.add(registryProcessor);
 				}
@@ -59,6 +62,7 @@
 			List<BeanDefinitionRegistryPostProcessor> currentRegistryProcessors = new ArrayList<>();
 
 			// First, invoke the BeanDefinitionRegistryPostProcessors that implement PriorityOrdered.
+			//首先执行实现了PriorityOrdered接口的BeanDefinitionRegistryPostProcessors
 			String[] postProcessorNames =
 					beanFactory.getBeanNamesForType(BeanDefinitionRegistryPostProcessor.class, true, false);
 			for (String ppName : postProcessorNames) {
@@ -67,12 +71,14 @@
 					processedBeans.add(ppName);
 				}
 			}
+			//首先是排序，排序完成后执行BeanDefinitionRegistryPostProcessors.postProcessBeanDefinitionRegistry
 			sortPostProcessors(currentRegistryProcessors, beanFactory);
 			registryProcessors.addAll(currentRegistryProcessors);
 			invokeBeanDefinitionRegistryPostProcessors(currentRegistryProcessors, registry, beanFactory.getApplicationStartup());
 			currentRegistryProcessors.clear();
 
 			// Next, invoke the BeanDefinitionRegistryPostProcessors that implement Ordered.
+			//然后执行实现了Ordered接口的BeanDefinitionRegistryPostProcessor
 			postProcessorNames = beanFactory.getBeanNamesForType(BeanDefinitionRegistryPostProcessor.class, true, false);
 			for (String ppName : postProcessorNames) {
 				if (!processedBeans.contains(ppName) && beanFactory.isTypeMatch(ppName, Ordered.class)) {
@@ -80,12 +86,14 @@
 					processedBeans.add(ppName);
 				}
 			}
+			//此处逻辑和上边的一致
 			sortPostProcessors(currentRegistryProcessors, beanFactory);
 			registryProcessors.addAll(currentRegistryProcessors);
 			invokeBeanDefinitionRegistryPostProcessors(currentRegistryProcessors, registry, beanFactory.getApplicationStartup());
 			currentRegistryProcessors.clear();
 
 			// Finally, invoke all other BeanDefinitionRegistryPostProcessors until no further ones appear.
+			//最后，执行剩余所有的BeanDefinitionRegistryPostProcessor，只要有一个还未执行的BeanDefinitionRegistryPostProcessor，就会一致循环，直到所有的BeanDefinitionRegistryPostProcessor都执行完毕
 			boolean reiterate = true;
 			while (reiterate) {
 				reiterate = false;
@@ -104,22 +112,26 @@
 			}
 
 			// Now, invoke the postProcessBeanFactory callback of all processors handled so far.
+			//当所有的BeanDefinitionRegistryPostProcessors的postProcessBeanDefinitionRegistry以后，执行BeanDefinitionRegistryPostProcessors和BeanFactoryPostProcessor的postProcessBeanFactory方法
 			invokeBeanFactoryPostProcessors(registryProcessors, beanFactory);
 			invokeBeanFactoryPostProcessors(regularPostProcessors, beanFactory);
 		}
 
 		else {
 			// Invoke factory processors registered with the context instance.
+			//这里如果不是BeanDefinitionRegistry的子类，那么直接执行所有BeanFactoryPostProcessor的postProcessBeanFactory方法，不管是否是BeanDefinitionRegistryPostProcessors的子类
 			invokeBeanFactoryPostProcessors(beanFactoryPostProcessors, beanFactory);
 		}
 
 		// Do not initialize FactoryBeans here: We need to leave all regular beans
 		// uninitialized to let the bean factory post-processors apply to them!
+		//最后是所有的BeanFactoryPostProcessor
 		String[] postProcessorNames =
 				beanFactory.getBeanNamesForType(BeanFactoryPostProcessor.class, true, false);
 
 		// Separate between BeanFactoryPostProcessors that implement PriorityOrdered,
 		// Ordered, and the rest.
+		//这里有三个list，第一个是所有实现了PriorityOrdered接口的，第二个是所有实现了Ordered接口的，最后是其他的
 		List<BeanFactoryPostProcessor> priorityOrderedPostProcessors = new ArrayList<>();
 		List<String> orderedPostProcessorNames = new ArrayList<>();
 		List<String> nonOrderedPostProcessorNames = new ArrayList<>();
@@ -137,7 +149,7 @@
 				nonOrderedPostProcessorNames.add(ppName);
 			}
 		}
-
+		//和BeanDefinitionRegistryPostProcessor类似，按照PriorityOrdered-》Ordered-》剩余排序执行所有的BeanFactoryPostProcessor的postProcessBeanFactory方法
 		// First, invoke the BeanFactoryPostProcessors that implement PriorityOrdered.
 		sortPostProcessors(priorityOrderedPostProcessors, beanFactory);
 		invokeBeanFactoryPostProcessors(priorityOrderedPostProcessors, beanFactory);
