--- a/spring/1-容器启动/1.5-执行beanFactory处理器-invokeBeanFactoryPostProcessors.md
+++ b/spring/1-容器启动/1.5-执行beanFactory处理器-invokeBeanFactoryPostProcessors.md
@@ -173,4 +173,26 @@
 		// modified the original metadata, e.g. replacing placeholders in values...
 		beanFactory.clearMetadataCache();
 	}
+	//执行所有BeanDefinitionRegistryPostProcessor的postProcessBeanDefinitionRegistry方法
+	private static void invokeBeanDefinitionRegistryPostProcessors(
+			Collection<? extends BeanDefinitionRegistryPostProcessor> postProcessors, BeanDefinitionRegistry registry, ApplicationStartup applicationStartup) {
+
+		for (BeanDefinitionRegistryPostProcessor postProcessor : postProcessors) {
+			StartupStep postProcessBeanDefRegistry = applicationStartup.start("spring.context.beandef-registry.post-process")
+					.tag("postProcessor", postProcessor::toString);
+			postProcessor.postProcessBeanDefinitionRegistry(registry);
+			postProcessBeanDefRegistry.end();
+		}
+	}
+	//执行所有BeanFactoryPostProcessor的postProcessBeanFactory方法
+	private static void invokeBeanFactoryPostProcessors(
+			Collection<? extends BeanFactoryPostProcessor> postProcessors, ConfigurableListableBeanFactory beanFactory) {
+
+		for (BeanFactoryPostProcessor postProcessor : postProcessors) {
+			StartupStep postProcessBeanFactory = beanFactory.getApplicationStartup().start("spring.context.bean-factory.post-process")
+					.tag("postProcessor", postProcessor::toString);
+			postProcessor.postProcessBeanFactory(beanFactory);
+			postProcessBeanFactory.end();
+		}
+	}
 ```
