--- a/spring/1-容器启动/1.6-注册beanFactory处理器-registerBeanPostProcessors.md
+++ b/spring/1-容器启动/1.6-注册beanFactory处理器-registerBeanPostProcessors.md
@@ -20,7 +20,7 @@
 		// list of all declined PRs involving changes to PostProcessorRegistrationDelegate
 		// to ensure that your proposal does not result in a breaking change:
 		// https://github.com/spring-projects/spring-framework/issues?q=PostProcessorRegistrationDelegate+is%3Aclosed+label%3A%22status%3A+declined%22
-
+		//获取所有的BeanPostProcessor的beanName
 		String[] postProcessorNames = beanFactory.getBeanNamesForType(BeanPostProcessor.class, true, false);
 
 		// Register BeanPostProcessorChecker that logs an info message when
@@ -28,7 +28,11 @@
 		// a bean is not eligible for getting processed by all BeanPostProcessors.
 		int beanProcessorTargetCount = beanFactory.getBeanPostProcessorCount() + 1 + postProcessorNames.length;
 		beanFactory.addBeanPostProcessor(new BeanPostProcessorChecker(beanFactory, beanProcessorTargetCount));
-
+		//将所有的BeanPostProcessor分为以下几类
+		//1、实现了PriorityOrdered接口
+		//2、实现了Ordered接口
+		//3、普通BeanPostProcessors
+		//4、实现了MergedBeanDefinitionPostProcessor接口，这个是spring内部的BeanPostProcessors
 		// Separate between BeanPostProcessors that implement PriorityOrdered,
 		// Ordered, and the rest.
 		List<BeanPostProcessor> priorityOrderedPostProcessors = new ArrayList<>();
@@ -50,7 +54,11 @@
 				nonOrderedPostProcessorNames.add(ppName);
 			}
 		}
-
+		//它的注册流程分为这几部分，
+		//1、首先排序实现了PriorityOrdered接口并注册
+		//2、其次排序实现了Ordered接口并注册
+		//3、第三步是所有不排序的BeanPostProcessor并注册
+		//4、最后是所有的spring内部的实现了MergedBeanDefinitionPostProcessor接口并注册
 		// First, register the BeanPostProcessors that implement PriorityOrdered.
 		sortPostProcessors(priorityOrderedPostProcessors, beanFactory);
 		registerBeanPostProcessors(beanFactory, priorityOrderedPostProcessors);
@@ -85,5 +93,24 @@
 		// Re-register post-processor for detecting inner beans as ApplicationListeners,
 		// moving it to the end of the processor chain (for picking up proxies etc).
 		beanFactory.addBeanPostProcessor(new ApplicationListenerDetector(applicationContext));
-	}   
+	} 
+	//将所有BeanPostProcessor注册到beanFactory
+	private static void registerBeanPostProcessors(
+			ConfigurableListableBeanFactory beanFactory, List<BeanPostProcessor> postProcessors) {
+		//此处的beanFactory，DefaultListableBeanFactory是AbstractBeanFactory的子类，所以会在走到这里，批量注册
+		if (beanFactory instanceof AbstractBeanFactory) {
+			// Bulk addition is more efficient against our CopyOnWriteArrayList there
+			((AbstractBeanFactory) beanFactory).addBeanPostProcessors(postProcessors);
+		}
+		else {
+			for (BeanPostProcessor postProcessor : postProcessors) {
+				beanFactory.addBeanPostProcessor(postProcessor);
+			}
+		}
+	}  
+	//将列表里的BeanPostProcessor全部移除，避免重复添加，因为MergedBeanDefinitionPostProcessor可能已经在前边添加过了，单个BeanPostProcessor的添加是一样逻辑的，所以此处不展示
+	public void addBeanPostProcessors(Collection<? extends BeanPostProcessor> beanPostProcessors) {
+		this.beanPostProcessors.removeAll(beanPostProcessors);
+		this.beanPostProcessors.addAll(beanPostProcessors);
+	}
 ```
