--- a/spring/1-容器启动/1.1-准备刷新-beanprepareRefresh.md
+++ b/spring/1-容器启动/1.1-准备刷新-beanprepareRefresh.md
@@ -12,7 +12,19 @@
 		initPropertySources();
 		//验证属性合法性，一般情况下可以继承对应ApplicationContext类添加
 		getEnvironment().validateRequiredProperties();
-		....
+		// Store pre-refresh ApplicationListeners...
+		if (this.earlyApplicationListeners == null) {
+			this.earlyApplicationListeners = new LinkedHashSet<>(this.applicationListeners);
+		}
+		else {
+			// Reset local application listeners to pre-refresh state.
+			this.applicationListeners.clear();
+			this.applicationListeners.addAll(this.earlyApplicationListeners);
+		}
+
+		// Allow for the collection of early ApplicationEvents,
+		// to be published once the multicaster is available...
+		this.earlyApplicationEvents = new LinkedHashSet<>();
 	}
 ```
 举例添加校验属性：  
