--- a/spring/1-容器启动/1.11-初始化bean-finishBeanFactoryInitialization.md
+++ b/spring/1-容器启动/1.11-初始化bean-finishBeanFactoryInitialization.md
@@ -82,6 +82,7 @@
 		}
 
 		// Trigger post-initialization callback for all applicable beans...
+		//初始化所有剩余的beanDefinition
 		for (String beanName : beanNames) {
 			Object singletonInstance = getSingleton(beanName);
 			if (singletonInstance instanceof SmartInitializingSingleton) {
@@ -100,5 +101,198 @@
 				smartInitialize.end();
 			}
 		}
+	}
+```
+所以这里最主要的方法为```getBean```和```getSingleton```，而getBean方法里会经常性的用到getSingleton，所以它们两个可以一起去看:
+```
+	@Override
+	public Object getBean(String name) throws BeansException {
+		return doGetBean(name, null, null, false);
+	}
+
+	@SuppressWarnings("unchecked")
+	protected <T> T doGetBean(
+			String name, @Nullable Class<T> requiredType, @Nullable Object[] args, boolean typeCheckOnly)
+			throws BeansException {
+		//转换beanName，这个方法会首先将beanName的所有“FACTORY_BEAN_PREFIX”移除，然后获取规范名称
+		String beanName = transformedBeanName(name);
+		Object beanInstance;
+
+		// Eagerly check singleton cache for manually registered singletons.
+		//首先从singleton缓存中获取用户手动注册的单例bean
+		Object sharedInstance = getSingleton(beanName);
+		//初始化创建的时候，spring的三级缓存都是不存在这个bean的所以，此处是null
+		if (sharedInstance != null && args == null) {
+			if (logger.isTraceEnabled()) {
+				//判断bean是否在初始化过程中
+				if (isSingletonCurrentlyInCreation(beanName)) {
+					logger.trace("Returning eagerly cached instance of singleton bean '" + beanName +
+							"' that is not fully initialized yet - a consequence of a circular reference");
+				}
+				else {
+					logger.trace("Returning cached instance of singleton bean '" + beanName + "'");
+				}
+			}
+			beanInstance = getObjectForBeanInstance(sharedInstance, name, beanName, null);
+		}
+
+		else {
+			// Fail if we're already creating this bean instance:
+			// We're assumably within a circular reference.
+			if (isPrototypeCurrentlyInCreation(beanName)) {
+				throw new BeanCurrentlyInCreationException(beanName);
+			}
+
+			// Check if bean definition exists in this factory.
+			BeanFactory parentBeanFactory = getParentBeanFactory();
+			if (parentBeanFactory != null && !containsBeanDefinition(beanName)) {
+				// Not found -> check parent.
+				String nameToLookup = originalBeanName(name);
+				if (parentBeanFactory instanceof AbstractBeanFactory) {
+					return ((AbstractBeanFactory) parentBeanFactory).doGetBean(
+							nameToLookup, requiredType, args, typeCheckOnly);
+				}
+				else if (args != null) {
+					// Delegation to parent with explicit args.
+					return (T) parentBeanFactory.getBean(nameToLookup, args);
+				}
+				else if (requiredType != null) {
+					// No args -> delegate to standard getBean method.
+					return parentBeanFactory.getBean(nameToLookup, requiredType);
+				}
+				else {
+					return (T) parentBeanFactory.getBean(nameToLookup);
+				}
+			}
+
+			if (!typeCheckOnly) {
+				markBeanAsCreated(beanName);
+			}
+
+			StartupStep beanCreation = this.applicationStartup.start("spring.beans.instantiate")
+					.tag("beanName", name);
+			try {
+				if (requiredType != null) {
+					beanCreation.tag("beanType", requiredType::toString);
+				}
+				RootBeanDefinition mbd = getMergedLocalBeanDefinition(beanName);
+				checkMergedBeanDefinition(mbd, beanName, args);
+
+				// Guarantee initialization of beans that the current bean depends on.
+				String[] dependsOn = mbd.getDependsOn();
+				if (dependsOn != null) {
+					for (String dep : dependsOn) {
+						if (isDependent(beanName, dep)) {
+							throw new BeanCreationException(mbd.getResourceDescription(), beanName,
+									"Circular depends-on relationship between '" + beanName + "' and '" + dep + "'");
+						}
+						registerDependentBean(dep, beanName);
+						try {
+							getBean(dep);
+						}
+						catch (NoSuchBeanDefinitionException ex) {
+							throw new BeanCreationException(mbd.getResourceDescription(), beanName,
+									"'" + beanName + "' depends on missing bean '" + dep + "'", ex);
+						}
+					}
+				}
+
+				// Create bean instance.
+				if (mbd.isSingleton()) {
+					sharedInstance = getSingleton(beanName, () -> {
+						try {
+							return createBean(beanName, mbd, args);
+						}
+						catch (BeansException ex) {
+							// Explicitly remove instance from singleton cache: It might have been put there
+							// eagerly by the creation process, to allow for circular reference resolution.
+							// Also remove any beans that received a temporary reference to the bean.
+							destroySingleton(beanName);
+							throw ex;
+						}
+					});
+					beanInstance = getObjectForBeanInstance(sharedInstance, name, beanName, mbd);
+				}
+
+				else if (mbd.isPrototype()) {
+					// It's a prototype -> create a new instance.
+					Object prototypeInstance = null;
+					try {
+						beforePrototypeCreation(beanName);
+						prototypeInstance = createBean(beanName, mbd, args);
+					}
+					finally {
+						afterPrototypeCreation(beanName);
+					}
+					beanInstance = getObjectForBeanInstance(prototypeInstance, name, beanName, mbd);
+				}
+
+				else {
+					String scopeName = mbd.getScope();
+					if (!StringUtils.hasLength(scopeName)) {
+						throw new IllegalStateException("No scope name defined for bean '" + beanName + "'");
+					}
+					Scope scope = this.scopes.get(scopeName);
+					if (scope == null) {
+						throw new IllegalStateException("No Scope registered for scope name '" + scopeName + "'");
+					}
+					try {
+						Object scopedInstance = scope.get(beanName, () -> {
+							beforePrototypeCreation(beanName);
+							try {
+								return createBean(beanName, mbd, args);
+							}
+							finally {
+								afterPrototypeCreation(beanName);
+							}
+						});
+						beanInstance = getObjectForBeanInstance(scopedInstance, name, beanName, mbd);
+					}
+					catch (IllegalStateException ex) {
+						throw new ScopeNotActiveException(beanName, scopeName, ex);
+					}
+				}
+			}
+			catch (BeansException ex) {
+				beanCreation.tag("exception", ex.getClass().toString());
+				beanCreation.tag("message", String.valueOf(ex.getMessage()));
+				cleanupAfterBeanCreationFailure(beanName);
+				throw ex;
+			}
+			finally {
+				beanCreation.end();
+			}
+		}
+
+		return adaptBeanInstance(name, beanInstance, requiredType);
+	}
+	public Object getSingleton(String beanName) {
+		return getSingleton(beanName, true);
+	}	
+	protected Object getSingleton(String beanName, boolean allowEarlyReference) {
+		// Quick check for existing instance without full singleton lock
+		//首先从singletonObjects里获取bean，如果没有获取到且bean正在初始化，那么就从earlySingletonObjects获取bean，如果还是没有获取到且允许提前构造bean，那么就加锁获取bean，还是先从singletonObjects获取，再从earlySingletonObjects获取，然后从singletonFactories获取，如果最终获取到那么久将获取到的bean存放到earlySingletonObjects并将singletonFactories里的factoryBean移除，这个逻辑比较简单，加锁前后的逻辑除了从factoryBean获取bean以外都相似，这个就是spring的三级缓存，主要用来解决循环依赖，singletonObjects是初始化完成的所有bean，earlySingletonObjects是构造但还未初始化的所有bean，singletonFactories是提前披露的所有单例工厂，earlySingletonObjects里的bean从singletonFactories里来，它们构成了spring-bean初始化的三级缓存
+		Object singletonObject = this.singletonObjects.get(beanName);
+		if (singletonObject == null && isSingletonCurrentlyInCreation(beanName)) {
+			singletonObject = this.earlySingletonObjects.get(beanName);
+			if (singletonObject == null && allowEarlyReference) {
+				synchronized (this.singletonObjects) {
+					// Consistent creation of early reference within full singleton lock
+					singletonObject = this.singletonObjects.get(beanName);
+					if (singletonObject == null) {
+						singletonObject = this.earlySingletonObjects.get(beanName);
+						if (singletonObject == null) {
+							ObjectFactory<?> singletonFactory = this.singletonFactories.get(beanName);
+							if (singletonFactory != null) {
+								singletonObject = singletonFactory.getObject();
+								this.earlySingletonObjects.put(beanName, singletonObject);
+								this.singletonFactories.remove(beanName);
+							}
+						}
+					}
+				}
+			}
+		}
+		return singletonObject;
 	}
 ```
