--- a/spring/1-容器启动/1.11-初始化bean-finishBeanFactoryInitialization.md
+++ b/spring/1-容器启动/1.11-初始化bean-finishBeanFactoryInitialization.md
@@ -37,7 +37,7 @@
 		beanFactory.preInstantiateSingletons();
 	}
 ```
-所以这里核心的方法是```beanFactory.preInstantiateSingletons```,我们知道factory是DefaultListableBeanFactory，所以查看实现为：
+所以这里核心的方法是```beanFactory.preInstantiateSingletons()```,我们知道factory是DefaultListableBeanFactory，所以查看实现为：
 ```
 	public void preInstantiateSingletons() throws BeansException {
 		if (logger.isTraceEnabled()) {
@@ -103,7 +103,7 @@
 		}
 	}
 ```
-所以这里最主要的方法为```getBean```和```getSingleton```，而getBean方法里会经常性的用到getSingleton，所以它们两个可以一起去看:
+所以这里最主要的方法为```getBean(String name)```和```getSingleton(String beanName)```，而getBean方法里会经常性的用到getSingleton，所以它们两个可以一起去看:
 ```
 	@Override
 	public Object getBean(String name) throws BeansException {
@@ -139,11 +139,13 @@
 		else {
 			// Fail if we're already creating this bean instance:
 			// We're assumably within a circular reference.
+			//是否存在原型模式下的循环依赖，如果存在则抛出异常，因为spring只处理单例模式下的循环依赖
 			if (isPrototypeCurrentlyInCreation(beanName)) {
 				throw new BeanCurrentlyInCreationException(beanName);
 			}
 
 			// Check if bean definition exists in this factory.
+			//获取父beanFactory，此处应为null
 			BeanFactory parentBeanFactory = getParentBeanFactory();
 			if (parentBeanFactory != null && !containsBeanDefinition(beanName)) {
 				// Not found -> check parent.
@@ -164,30 +166,39 @@
 					return (T) parentBeanFactory.getBean(nameToLookup);
 				}
 			}
-
+			//从上边调用可以看到，typeCheckOnly=false，所以此处条件成立
 			if (!typeCheckOnly) {
+				//标记这个bean已经创建或者创建中
 				markBeanAsCreated(beanName);
 			}
 
 			StartupStep beanCreation = this.applicationStartup.start("spring.beans.instantiate")
 					.tag("beanName", name);
 			try {
+				//requiredType在此处为null
 				if (requiredType != null) {
 					beanCreation.tag("beanType", requiredType::toString);
 				}
+				//获取合并的beanDefinition
 				RootBeanDefinition mbd = getMergedLocalBeanDefinition(beanName);
+				//判断bean是否是abstract，如果是abstract则抛出异常BeanIsAbstractException
 				checkMergedBeanDefinition(mbd, beanName, args);
 
 				// Guarantee initialization of beans that the current bean depends on.
+				//保证当前bean的依赖项都被初始化
 				String[] dependsOn = mbd.getDependsOn();
 				if (dependsOn != null) {
 					for (String dep : dependsOn) {
+						//首先判断bean是否已存在此项dep的依赖，所有已存在的依赖存放在dependentBeanMap里，key为beanName，value是set集合
+						//第二是判断依赖的dep是否存在循环依赖，譬如beanA依赖beanB、beanC，beanB又依赖beanC，那么此时会报错
 						if (isDependent(beanName, dep)) {
 							throw new BeanCreationException(mbd.getResourceDescription(), beanName,
 									"Circular depends-on relationship between '" + beanName + "' and '" + dep + "'");
 						}
+						//注册依赖bean，会注册两个map，1：将bean对dep的依赖添加到dependentBeanMap里记录依赖的bean，2：以dep为key将bean添加到dependenciesForBeanMap里记录被依赖的bean
 						registerDependentBean(dep, beanName);
 						try {
+							//获取bean
 							getBean(dep);
 						}
 						catch (NoSuchBeanDefinitionException ex) {
@@ -198,19 +209,27 @@
 				}
 
 				// Create bean instance.
+				//创建bean，bean的创建分为三种
+				//1:单例
+				//2:原型
+				//3:剩余其他
 				if (mbd.isSingleton()) {
+					//构建单例bean
 					sharedInstance = getSingleton(beanName, () -> {
 						try {
+							//构造bean
 							return createBean(beanName, mbd, args);
 						}
 						catch (BeansException ex) {
 							// Explicitly remove instance from singleton cache: It might have been put there
 							// eagerly by the creation process, to allow for circular reference resolution.
 							// Also remove any beans that received a temporary reference to the bean.
+							//销毁单例bean，首先从单例缓存中移除bean，然后从disposableBeans移除bean，然后级联销毁所依赖的bean，销毁bean本身，然后从所有其他bean里移除自身的依赖
 							destroySingleton(beanName);
 							throw ex;
 						}
 					});
+					//从bean实例获取bean
 					beanInstance = getObjectForBeanInstance(sharedInstance, name, beanName, mbd);
 				}
 
@@ -218,16 +237,21 @@
 					// It's a prototype -> create a new instance.
 					Object prototypeInstance = null;
 					try {
+						//在原型模式bean构造前会判断prototypesCurrentlyInCreation是否有值，如果没有就设置beanName，如果有值且是string类型就转换成set并将beanName添加到集合，如果是set类型，则直接添加到集合
 						beforePrototypeCreation(beanName);
+						//构造bean
 						prototypeInstance = createBean(beanName, mbd, args);
 					}
 					finally {
+						//最后会从prototypesCurrentlyInCreation移除当前beanName，如果是string类型则直接移除，如果是set类型则移除当前beanName
 						afterPrototypeCreation(beanName);
 					}
+					//从bean实例获取bean
 					beanInstance = getObjectForBeanInstance(prototypeInstance, name, beanName, mbd);
 				}
 
 				else {
+					//根据scope获取bean，和prototype模式代码基本一致
 					String scopeName = mbd.getScope();
 					if (!StringUtils.hasLength(scopeName)) {
 						throw new IllegalStateException("No scope name defined for bean '" + beanName + "'");
@@ -294,5 +318,271 @@
 			}
 		}
 		return singletonObject;
+	}
+```
+细化看这个方法调用的每一步，首先看```getSingleton(String beanName, ObjectFactory<?> singletonFactory)```，这个方法和上边使用到的```getSingleton(String beanName)```不同，这个方法不只是从缓存中获取bean，当bean从缓存中获取不到时，会通过工厂创建这个bean的实例，并将这个bean添加到缓存中：
+```
+	public Object getSingleton(String beanName, ObjectFactory<?> singletonFactory) {
+		Assert.notNull(beanName, "Bean name must not be null");
+		synchronized (this.singletonObjects) {
+			//从缓存中获取bean对应的实例
+			Object singletonObject = this.singletonObjects.get(beanName);
+			if (singletonObject == null) {
+				if (this.singletonsCurrentlyInDestruction) {
+					throw new BeanCreationNotAllowedException(beanName,
+							"Singleton bean creation not allowed while singletons of this factory are in destruction " +
+							"(Do not request a bean from a BeanFactory in a destroy method implementation!)");
+				}
+				if (logger.isDebugEnabled()) {
+					logger.debug("Creating shared instance of singleton bean '" + beanName + "'");
+				}
+				beforeSingletonCreation(beanName);
+				boolean newSingleton = false;
+				boolean recordSuppressedExceptions = (this.suppressedExceptions == null);
+				if (recordSuppressedExceptions) {
+					this.suppressedExceptions = new LinkedHashSet<>();
+				}
+				try {
+					//如果获取不到，就调用工厂的创建实例方法，创建完成后会将bean添加到缓存中
+					singletonObject = singletonFactory.getObject();
+					newSingleton = true;
+				}
+				catch (IllegalStateException ex) {
+					// Has the singleton object implicitly appeared in the meantime ->
+					// if yes, proceed with it since the exception indicates that state.
+					singletonObject = this.singletonObjects.get(beanName);
+					if (singletonObject == null) {
+						throw ex;
+					}
+				}
+				catch (BeanCreationException ex) {
+					if (recordSuppressedExceptions) {
+						for (Exception suppressedException : this.suppressedExceptions) {
+							ex.addRelatedCause(suppressedException);
+						}
+					}
+					throw ex;
+				}
+				finally {
+					if (recordSuppressedExceptions) {
+						this.suppressedExceptions = null;
+					}
+					afterSingletonCreation(beanName);
+				}
+				//bean实例创建成功，将bean添加到缓存中
+				if (newSingleton) {
+					addSingleton(beanName, singletonObject);
+				}
+			}
+			return singletonObject;
+		}
+	}
+```
+所以关键步骤还是委托```createBean(String beanName, RootBeanDefinition mbd, @Nullable Object[] args)```执行bean的创建：
+```
+	protected Object createBean(String beanName, RootBeanDefinition mbd, @Nullable Object[] args)
+			throws BeanCreationException {
+
+		if (logger.isTraceEnabled()) {
+			logger.trace("Creating instance of bean '" + beanName + "'");
+		}
+		RootBeanDefinition mbdToUse = mbd;
+
+		// Make sure bean class is actually resolved at this point, and
+		// clone the bean definition in case of a dynamically resolved Class
+		// which cannot be stored in the shared merged bean definition.
+		Class<?> resolvedClass = resolveBeanClass(mbd, beanName);
+		if (resolvedClass != null && !mbd.hasBeanClass() && mbd.getBeanClassName() != null) {
+			mbdToUse = new RootBeanDefinition(mbd);
+			mbdToUse.setBeanClass(resolvedClass);
+		}
+
+		// Prepare method overrides.
+		//准备方法覆盖，也就是lookup-method和replace-method的配置信息
+		try {
+			mbdToUse.prepareMethodOverrides();
+		}
+		catch (BeanDefinitionValidationException ex) {
+			throw new BeanDefinitionStoreException(mbdToUse.getResourceDescription(),
+					beanName, "Validation of method overrides failed", ex);
+		}
+
+		try {
+			// Give BeanPostProcessors a chance to return a proxy instead of the target bean instance.
+			//实例化前，这一步会遍历所有实现了InstantiationAwareBeanPostProcessor的BeanPostProcessor，如果这一步创建了bean实例，那么久不会走下边的方法
+			//这一步是给BeanPostProcessors一个创建代理的机会用来替换bean实例
+			Object bean = resolveBeforeInstantiation(beanName, mbdToUse);
+			if (bean != null) {
+				return bean;
+			}
+		}
+		catch (Throwable ex) {
+			throw new BeanCreationException(mbdToUse.getResourceDescription(), beanName,
+					"BeanPostProcessor before instantiation of bean failed", ex);
+		}
+
+		try {
+			//创建bean实例
+			Object beanInstance = doCreateBean(beanName, mbdToUse, args);
+			if (logger.isTraceEnabled()) {
+				logger.trace("Finished creating instance of bean '" + beanName + "'");
+			}
+			return beanInstance;
+		}
+		catch (BeanCreationException | ImplicitlyAppearedSingletonException ex) {
+			// A previously detected exception with proper bean creation context already,
+			// or illegal singleton state to be communicated up to DefaultSingletonBeanRegistry.
+			throw ex;
+		}
+		catch (Throwable ex) {
+			throw new BeanCreationException(
+					mbdToUse.getResourceDescription(), beanName, "Unexpected exception during bean creation", ex);
+		}
+	}
+	//创建代理bean
+	protected Object resolveBeforeInstantiation(String beanName, RootBeanDefinition mbd) {
+		Object bean = null;
+		if (!Boolean.FALSE.equals(mbd.beforeInstantiationResolved)) {
+			// Make sure bean class is actually resolved at this point.
+			if (!mbd.isSynthetic() && hasInstantiationAwareBeanPostProcessors()) {
+				Class<?> targetType = determineTargetType(beanName, mbd);
+				if (targetType != null) {
+					bean = applyBeanPostProcessorsBeforeInstantiation(targetType, beanName);
+					if (bean != null) {
+						//如果bean创建成功，那么对这个bean执行所有BeanPostprocessor的postProcessAfterInitialization方法
+						bean = applyBeanPostProcessorsAfterInitialization(bean, beanName);
+					}
+				}
+			}
+			//表示这个bean已经处理过
+			mbd.beforeInstantiationResolved = (bean != null);
+		}
+		return bean;
+	}
+	//遍历所有实现了InstantiationAwareBeanPostProcessor的BeanPostProcessor的postProcessBeforeInstantiation方法
+	protected Object applyBeanPostProcessorsBeforeInstantiation(Class<?> beanClass, String beanName) {
+		for (InstantiationAwareBeanPostProcessor bp : getBeanPostProcessorCache().instantiationAware) {
+			Object result = bp.postProcessBeforeInstantiation(beanClass, beanName);
+			if (result != null) {
+				return result;
+			}
+		}
+		return null;
+	}
+	//创建bean
+	protected Object doCreateBean(String beanName, RootBeanDefinition mbd, @Nullable Object[] args)
+			throws BeanCreationException {
+
+		// Instantiate the bean.
+		BeanWrapper instanceWrapper = null;
+		//如果bean是单例，就从factoryBeanInstanceCache获取并移除缓存
+		if (mbd.isSingleton()) {
+			instanceWrapper = this.factoryBeanInstanceCache.remove(beanName);
+		}
+		if (instanceWrapper == null) {
+			//如果从factoryBeanInstanceCache获取不到bean实例就创建beanWrapper
+			instanceWrapper = createBeanInstance(beanName, mbd, args);
+		}
+		//获取被包装的对象
+		Object bean = instanceWrapper.getWrappedInstance();
+		//获取被包装的class
+		Class<?> beanType = instanceWrapper.getWrappedClass();
+		if (beanType != NullBean.class) {
+			mbd.resolvedTargetType = beanType;
+		}
+
+		// Allow post-processors to modify the merged bean definition.
+		//执行所有实现了MergedBeanDefinitionPostProcessor的postProcessMergedBeanDefinition方法
+		synchronized (mbd.postProcessingLock) {
+			if (!mbd.postProcessed) {
+				try {
+					applyMergedBeanDefinitionPostProcessors(mbd, beanType, beanName);
+				}
+				catch (Throwable ex) {
+					throw new BeanCreationException(mbd.getResourceDescription(), beanName,
+							"Post-processing of merged bean definition failed", ex);
+				}
+				mbd.postProcessed = true;
+			}
+		}
+
+		// Eagerly cache singletons to be able to resolve circular references
+		// even when triggered by lifecycle interfaces like BeanFactoryAware.
+		//如果bean是单例的、允许循环引用、且bean正在创建，那么就将bean添加到三级缓存的singletonFactories中
+		boolean earlySingletonExposure = (mbd.isSingleton() && this.allowCircularReferences &&
+				isSingletonCurrentlyInCreation(beanName));
+		if (earlySingletonExposure) {
+			if (logger.isTraceEnabled()) {
+				logger.trace("Eagerly caching bean '" + beanName +
+						"' to allow for resolving potential circular references");
+			}
+			addSingletonFactory(beanName, () -> getEarlyBeanReference(beanName, mbd, bean));
+		}
+
+		// Initialize the bean instance.
+		Object exposedObject = bean;
+		try {
+			//从BeanDefinition获取属性值填充bean，如果依赖其他bean的话会递归进行初始化
+			populateBean(beanName, mbd, instanceWrapper);
+			//初始化bean
+			//注入bean的Aware相关依赖
+			//对bean执行所有BeanPostProcessor的postProcessBeforeInitialization方法
+			//如果bean实现了InitializingBean接口则执行bean的afterPropertiesSet方法
+			//调用init-method，执行init方法
+			//对bean执行所有BeanPostProcessor的postProcessAfterInitialization方法
+			exposedObject = initializeBean(beanName, exposedObject, mbd);
+		}
+		catch (Throwable ex) {
+			if (ex instanceof BeanCreationException && beanName.equals(((BeanCreationException) ex).getBeanName())) {
+				throw (BeanCreationException) ex;
+			}
+			else {
+				throw new BeanCreationException(
+						mbd.getResourceDescription(), beanName, "Initialization of bean failed", ex);
+			}
+		}
+
+		if (earlySingletonExposure) {
+			//从缓存获取bean对象，不允许提前初始化，只有在循环引用的时候earlySingletonReference才不为空
+			Object earlySingletonReference = getSingleton(beanName, false);
+			if (earlySingletonReference != null) {
+				//如果bean没有被增强过，那么使用从缓存获取的结果
+				if (exposedObject == bean) {
+					exposedObject = earlySingletonReference;
+				}
+				else if (!this.allowRawInjectionDespiteWrapping && hasDependentBean(beanName)) {
+					//检查依赖
+					String[] dependentBeans = getDependentBeans(beanName);
+					Set<String> actualDependentBeans = new LinkedHashSet<>(dependentBeans.length);
+					for (String dependentBean : dependentBeans) {
+						if (!removeSingletonIfCreatedForTypeCheckOnly(dependentBean)) {
+							actualDependentBeans.add(dependentBean);
+						}
+					}
+					//判断bean的其他依赖是否已创建，如果有未创建的则抛异常
+					if (!actualDependentBeans.isEmpty()) {
+						throw new BeanCurrentlyInCreationException(beanName,
+								"Bean with name '" + beanName + "' has been injected into other beans [" +
+								StringUtils.collectionToCommaDelimitedString(actualDependentBeans) +
+								"] in its raw version as part of a circular reference, but has eventually been " +
+								"wrapped. This means that said other beans do not use the final version of the " +
+								"bean. This is often the result of over-eager type matching - consider using " +
+								"'getBeanNamesForType' with the 'allowEagerInit' flag turned off, for example.");
+					}
+				}
+			}
+		}
+
+		// Register bean as disposable.
+		//注册bean到disposableBeans
+		try {
+			registerDisposableBeanIfNecessary(beanName, bean, mbd);
+		}
+		catch (BeanDefinitionValidationException ex) {
+			throw new BeanCreationException(
+					mbd.getResourceDescription(), beanName, "Invalid destruction signature", ex);
+		}
+
+		return exposedObject;
 	}
 ```
